added headers, pic and background

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Vote KVK!</title>
 </head>
 <body>
-    <h1>Vote KVK!</h1>
+    <div class="banner"><h1 class="vote"><i>Vote KVK!</i></h1>
+    <img class="bwpic" src="./kvkpic.jpg"/>
+    <h1 class="vote"><i>Vote KVK!</i></h1>
+    </div>
+    <h1 class="gold">Kurt van Kuller</h1>
+
+    <h3 class="for"><i>for</i></h3>
+    <h2 class="blue"> WESTCHESTER COUNTY LEGISLATOR, DISTRICT 7</h2> 
+    <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
+
+    <p>For effective, professional leadership! No more broken promises! Let’s elect someone who understands us and delivers on what’s important.</p>
 </body>
 </html>
