opacity added for bg

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h2 class="blue"> WESTCHESTER COUNTY LEGISLATOR, DISTRICT 7</h2> 
     <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
 
-    <p>For effective, professional leadership! No more broken promises! Let’s elect someone who understands us and delivers on what’s important.</p>
+    <p>For effective, professional leadership! No more broken promises! Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p>
+    <p>Meet KURT VAN KULLER, one of the nation&#39;s TOP LOCAL
+        GOVERNMENT EXPERTS.</p>
 </body>
 </html>
