added bold and upper span class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
 
     <p>For effective, professional leadership! No more broken promises! Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p>
-    <p>Meet KURT VAN KULLER, one of the nation&#39;s TOP LOCAL
-        GOVERNMENT EXPERTS.</p>
+    <p>Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation&#39;s <span class="boldupper">TOP LOCAL
+        GOVERNMENT EXPERTS</span>.</p>
 </body>
 </html>
