--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vote KVK!</title>
 </head>
 <body>
+    <nav></nav>
     <div class="banner"><h1 class="vote"><i>Vote KVK!</i></h1>
     <img class="bwpic" src="./kvkpic.jpg"/>
     <h1 class="vote"><i>Vote KVK!</i></h1>
@@ -17,8 +18,35 @@
     <h2 class="blue"> WESTCHESTER COUNTY LEGISLATOR, DISTRICT 7</h2> 
     <h2 class="blue2">(Larchmont, Mamaroneck, Rye, Harrison)</h2>
 
-    <p>For effective, professional leadership! No more broken promises! Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p>
-    <p>Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation&#39;s <span class="boldupper">TOP LOCAL
+    <p class="effective">For effective, professional leadership! No more broken promises! Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p>
+    <p class="meet">Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation&#39;s <span class="boldupper">TOP LOCAL
         GOVERNMENT EXPERTS</span>.</p>
+       <div> <img class="kvk2" src="./kvk2.jpg"/> </div>
+       <p><i>His priorities are the same as yours: </i></p>
+       <ol class="talkingpoints">
+            <li>Help with the spiraling cost of living here</li>
+            <li>Promote the economy and job opportunities</li>
+            <li>Stop repeated flood disasters</li>
+            <li>Enhance quality of life and property values</li>
+            <li>For families and intelligent discussion</li>
+       </ol>
+       <ul>
+            <li><span class="red">JUST CUT TAXES ALREADY&#33;</span> Property Taxes in Westchester (and especially the Sound Shore) remain the <u><b><uppercase>HIGHEST</uppercase> in the United States&#33;</b></u> The County can afford to lower them. This will <u>lower rents</u> too&#33;</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li> <span class="red">PROTECT OUR GREAT QUALITY OF LIFE&#33;</span> Let&#39;s avoid divisive politics and nuisance messages from County officials about other culture&#39;s holidays. Let&#39;s make our streets <uppercase>SAFER</uppercase> and our schools keep the <uppercase>RIGHT PRIORITIES</uppercase>&#33;
+                <ul>
+                    <li>Stop &quot;Sanctuary County&quot; gamesmanship that risks the loss of hundreds of 	&#36;millions in federal aid. Protect our great Latin American neighborhoods that contribute so much to our lives&#33;</li>
+                    <li>Expand recreational facilities for our youth. Continue efforts to clean the Sound.</li>
+                    <img src="./kvkfamily.jpg"/>
+                </ul>
+            </li>
+            <li><span class="red">KEEP NATIONAL POLITICS OUT OF DISTRICT 7&#33;</span> Our local District 7 issues do not match up with national media narratives. Kurt is a proven manager and problem-solver who <b>USES COMMON SENSE</b>, not ideology&#33;
+                <ul>
+                    <li class="point">Restore a traditional 2-party system of checks and balances to the County Legislature&#33;</li>
+                </ul>
+            </li>
+       </ul>
 </body>
 </html>
