--- a/ontheissues.html
+++ b/ontheissues.html
@@ -29,19 +29,22 @@
                 <li class="secondli">Oppose MTA payroll tax hikes and the MTA congestion pricing tax.</li>
             </ul>
         </li>
-        <li><span>STOP CON ED&#39;s OUTRAGEOUS RATE HIKES!</span> Kurt&#39;s wants to: 
-            <ol class="secondli">
+        <div>
+        <li><span class="red">STOP CON ED&#39;s OUTRAGEOUS RATE HIKES!</span> Kurt&#39;s wants to: 
+            <ol class="specialli">
                 <li class="secondli">lower high local taxes on Con Ed that inflate our bills:</li>
                 <li class="secondli">disgorge excessive profits and executive pay;</li>
                 <li class="secondli">stop subsidizing NY City&#39;s grid;</li>
                 <li class="secondli">revise NY State&#39;s <uppercase>IMPOSSIBLE</uppercase> energy <uppercase>MANDATEs</uppercase> (70% carbon&ndash;free in 2030) &ndash;one of most aggressive in the world&#33;</li>
             </ol> 
         
-        <li><span class="red">FIX THE FLOODING PROBLEM FINALLY&#33;</span> Every time it rains heavily, our residents still fear for homes and families. Many have repeatedly paid for extensive repairs without government help while incurring surging flood insurance premiums. <uppercase><b>YET VERY LITTLE HAS BEEN DONE</b> OVER MANY YEARS</uppercase> to contain flood risks. 
+        <br><br><br><br><br> <div> 
+        </div><li><span class="red"><div>FIX THE FLOODING PROBLEM FINALLY&#33;</div></span> Every time it rains heavily, our residents still fear for homes and families. Many have repeatedly paid for extensive repairs without government help while incurring surging flood insurance premiums. <uppercase><b>YET VERY LITTLE HAS BEEN DONE</b> OVER MANY YEARS</uppercase> to contain flood risks. 
             <ul>
                 <li class="secondli">Much of the flooding in Mamaroneck has been caused by lack of maintenance of the storm system and overdevelopment. <b>Your Local Representatives <uppercase>MUST</uppercase> Answer for this&#33;</b></li>
             </ul>
         </li>
+    </div>
         
         <li> <span class="red">PROTECT OUR GREAT QUALITY OF LIFE&#33;</span> Let&#39;s avoid divisive politics and nuisance messages from County officials about other culture&#39;s holidays. Let&#39;s make our streets <uppercase>SAFER</uppercase> and <i>our schools keep the <uppercase>RIGHT PRIORITIES</uppercase></i>&#33;
             <ul>
