--- a/ontheissues.html
+++ b/ontheissues.html
@@ -50,7 +50,7 @@
             <ul>
                 <li class="secondli">Stop &quot;Sanctuary County&quot; gamesmanship that risks the loss of hundreds of &#36;millions in federal aid. Protect our great Latin American neighborhoods that contribute so much to our lives&#33;</li>
                 <li class="secondli">Expand recreational facilities for our youth. Continue efforts to clean the Sound.</li>
-                <img src="./kvkfamily.jpg"/> <img src="./kvk3.jpg"/>
+                <div><img class="kvkfamily" src="./kvkfamily.jpg"/> <img class="kvk3" src="./kvk3.jpg"/></div>
             </ul>
         </li>
         <li><span class="red">KEEP NATIONAL POLITICS OUT OF DISTRICT 7&#33;</span> Our local District 7 issues do not match up with national media narratives. Kurt is a proven manager and problem&ndash;solver who <uppercase><b>USES COMMON SENSE</b></uppercase>, not ideology&#33;
