changed color of bottom of issues paragraph

--- a/ontheissues.html
+++ b/ontheissues.html
@@ -55,7 +55,7 @@
         </li>
         <li><span class="red">KEEP NATIONAL POLITICS OUT OF DISTRICT 7&#33;</span> Our local District 7 issues do not match up with national media narratives. Kurt is a proven manager and problem&ndash;solver who <uppercase><b>USES COMMON SENSE</b></uppercase>, not ideology&#33;
             <ul>
-                <li class="point secondli"><i>Restore a traditional 2&ndash;party system of checks and balances to the County Legislature&#33;</i></li>
+                <li class="point secondli">Restore a traditional 2&ndash;party system of checks and balances to the County Legislature&#33;</li>
             </ul>
         </li>
    </ul>
