--- a/experience.html
+++ b/experience.html
@@ -3,17 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Vote for KVK!</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> |
-            <li><a>Experience</a></li> |
-            <li><a>Contact</a></li> |
-            <li><a>Volunteer</a></li> |
+            <li class=""><a href="./index.html">Home</a></li> |
+            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
+            <li><a href="./contact.html">Contact</a></li> |
+            <li><a href="./volunteer.html">Volunteer</a></li> |
             <li><a href="#"><button class="button">DONATE</button></a></li>
         </ul>
     </nav>
+
+    <p>Choose a proven over-achiever, a renowned EXPERT in Local Government Finance!</p>
+<p>Kurt is a high energy, over-achiever </p>
+
+<p>Kurt will keep you informed</p>
+
+<p>Longtime Rye homeowner. Raised two sons through Rye public schools (one Class President). Married 37 years to wife Diana, actress in Screen Actors Guild and interior decorator. Native to NYC and Westchester County, lived temporarily in Beverly Hills, Minneapolis, and Greenwich. Presently in Oakland Beach area in Rye. Previously owned home on Rye Beach Avenue next to Nursery Field.</p> 
+<p>9/11 Witness and Survivor.</p>
+
+
+<p>Leading Municipal Finance Expert: National figure in municipal finance world; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world’s largest banks. Interacted with top government officials regularly. Legendary 47-year career in Public Finance on Wall Street.</p>
+
+Unprecedented number of first place awards by investors in polls. Cited by Institutional Investor magazine as one of 10 “Best of the Best” for expertise, communication, accuracy. Managed departments of professionals, including 16 years at as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm.
+Foremost National Expert also on governmental housing debt/real estate finance. Provided testimony numerous times to U.S. Congress and Senate. Appointed by National Housing Advisory Panel by NY Senator D’Amato. 
+Widely Recognized Public Speaker and media commentator for municipal bonds. Extensive press portfolio and groundbreaking research published. Regular Conference organizer and Chairman. LinkedIn Champion. 
+Full Time Public Servant since July 2024.  Excellent health. Will work long hours for District 7.  
+Professional Organizations/Public Service: Volunteer at Resurrection Church in Rye, Rye Historical Society (donor), Jay Estate, POTs, Save the Sound, Friends of Read Wildlife, and more.
+Member, Municipal Forum of New York. Past Board Member & Treasurer. Member and past Chairman of Municipal Analysts Group of New York. Member of National Federation of Municipal Analysts and former Board member. 
+Certified Financial Analyst (C.F.A.). 
+Education: MBA Finance, State University of NY at Albany 1980. Full Scholarship. B.A. Economics SUNYA. Merit Scholarship.
+
+AWARDS 
+•	AWARD OF EXCELLENCE from NATIONAL FEDERATION OF MUNICIPAL ANALYSTS. 
+•	Cited by Institutional Investor magazine each year from 1996-2002 as one of ten “Best of the Best” analysts on Wall Street for Expertise and Service.
+•	Elected to unprecedented number of first place awards in investor ballots by Institutional Investor (11), The Bond Buyer (2) and Smiths Research and Gradings (19). Additional second and third place awards (11). Research awards ended due to cessation of certain polls by magazines and finally by departure from Research to managing money and other businesses. 
+
+MEDIA APPEARANCES 
+•	Contributing Author to Fank Fabozzi Handbook of Municipal Bonds (2 chapters) 2007 - still the foremost textbook on municipal bonds for professionals. 
+•	Bloomberg News, (TV and radio); CNN; CREDIT MARKET WATCH. 
+•	Wall Street Journal, New York Times, Forbes, NY Post, Daily News, Investment Dealer's Digest, Money, Dow Jones.
+•	The Bond Buyer, Research & Ratings Review. Mortgage Banking, Municipal Finance Journal, Public Finance Journal, Mkt Chronicle, Securities Week, Municipal Bond Portfolio Management, and more.
+
+PUBLIC SPEAKING: 
+NCSHA Annual Conference 2023, 2022, 2021. Bond Buyer California Conference 9/2017; CFA Society LA 10/17; CFA Institute Annual Wealth Mgt. Conf 3/16; Smith All-Star Conf special keynote speaker 11/2016; California Society of Municipal Analysts Annual Conference 11/15; CFA Institute Roundtables 7/13, 9/11, 5/11, 6/10. Chairman, Smiths Housing Conference 2008. Chairman of FAC's Housing High Yield Conference. 
+Regular annual speaker at Smith’s Affordable Hsg Conference; NFMA, Nat’l Council of State HFAs, S&P conferences, The Bond Buyer, Buyer’s Conference, Fabozzi, JJ Kenny High Yield, MAGNY, BMA, local analysts societies, NY Institute of Finance, New York University. Featured speaker at Smith’s Gaming and Housing conferences. Capital Markets CAS 2014. CFA Minnesota Speeches 12/18, 8/19. Conference Chairman 2020. 
+Key speaker at Merrill Lynch institutional client conferences. Annual speaker at Sit Investment client conferences. 
+
+Professional Organizations and Public Service 
+Member, Municipal Forum of New York. Board Member & Treasurer of Municipal Forum of NY, 1992-97. 
+Chairman, Municipal Analysts Group of New York 1988-89. Current Honorary Past Chairman. 
+Member and Former Board member of National Federation of Municipal Analysts. Chairman, Ethics Committee 1988-91; Pension Committee 2011. 
+Selected by Senator Alphonse D’Amato to serve on National Housing Task Force Advisor Panel1987-89. 
+Chairman, Public Securities Association Committee on Reauthorization of Single Family Mortgage Revenue Bonds. Testimony provided to US Senate 1988. 
+Organized Bond Marlet Association Task Force to advise HUD on Section 8. 1998 
+Section 8 roundtable for Senate Hsg and Comm Dev Subcommittee 1995. 
+Member, PSA Task Force on FHA. Testimony to Senate Banking Committee 1995. 
+Formerly one of initial 100 members of CFA Wealth Management League of Los Angeles. 
+
+
+
+
+
+
+
+
 </body>
 </html>
