--- a/ontheissues.html
+++ b/ontheissues.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Vote for KVK!</title>
 </head>
@@ -10,9 +11,9 @@
     <nav>
         <ul>
             <li class=""><a href="./index.html">Home</a></li> |
-            <li><a>Experience</a></li> |
-            <li><a>Contact</a></li> |
-            <li><a>Volunteer</a></li> |
+            <li><a href="./experience.html">Experience</a></li> |
+            <li><a href="./contact.html">Contact</a></li> |
+            <li><a href="./volunteer.html">Volunteer</a></li> |
             <li><a href="#"><button class="button">DONATE</button></a></li>
         </ul>
     </nav>
