made changes to bg, bootstrap classes, containers, more content on experience updated

--- a/experience.html
+++ b/experience.html
@@ -8,26 +8,25 @@
     <title>Vote for KVK!</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar-nav">
         <ul>
             <li class=""><a href="./index.html">Home</a></li> |
             <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
             <li><a href="./contact.html">Contact</a></li> |
             <li><a href="./volunteer.html">Volunteer</a></li> |
-            <li><a href="#"><button class="button">DONATE</button></a></li>
+            <li><a href="#"><button class="btn button">DONATE</button></a></li>
         </ul>
     </nav>
 
-    <p>Choose a proven over-achiever, a renowned EXPERT in Local Government Finance!</p>
-<p>Kurt is a high energy, over-achiever </p>
+    <div class="container greybgexp"><p>Choose a proven over-achiever, a renowned EXPERT in Local Government Finance!</p></div>
+<div class="container greybgexp"><p>Kurt is a high energy, over-achiever who will fight for you and keep you informed.</p></div>
 
-<p>Kurt will keep you informed</p>
-
-<p>Longtime Rye homeowner. Raised two sons through Rye public schools (one Class President). Married 37 years to wife Diana, actress in Screen Actors Guild and interior decorator. Native to NYC and Westchester County, lived temporarily in Beverly Hills, Minneapolis, and Greenwich. Presently in Oakland Beach area in Rye. Previously owned home on Rye Beach Avenue next to Nursery Field.</p> 
-<p>9/11 Witness and Survivor.</p>
+<img class="kvk5" src="./kvk5.jpg" />
+<div class="container greybgexp"><p><b><u>Longtime Rye homeowner.</u></b>Raised two sons through Rye public schools (one Class President). Married 37 years to wife Diana, actress in Screen Actors Guild, interior decorator. Homeowner now in Oakland Beach area of Rye, previously on Rye Beach Avenue (next to Nursery Field). Native to NYC and Westchester County, also lived briefly in Beverly Hills, Minneapolis, and Greenwich. 9/11 Witness Survivor. Witness to George Floyd riots</p></div>
 
 
-<p>Leading Municipal Finance Expert: National figure in municipal finance world; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world’s largest banks. Interacted with top government officials regularly. Legendary 47-year career in Public Finance on Wall Street.</p>
+
+<p><b><u>Leading Municipal Finance Expert:</u></b> National figure in municipal finance world; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world’s largest banks. Interacted with top government officials regularly. Legendary 47-year career in Public Finance on Wall Street.</p>
 
 Unprecedented number of first place awards by investors in polls. Cited by Institutional Investor magazine as one of 10 “Best of the Best” for expertise, communication, accuracy. Managed departments of professionals, including 16 years at as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm.
 Foremost National Expert also on governmental housing debt/real estate finance. Provided testimony numerous times to U.S. Congress and Senate. Appointed by National Housing Advisory Panel by NY Senator D’Amato. 
