--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>Vote for KVK!</title>
 </head>
 <body>
-        <nav>
+        <nav class="navbar-nav">
             <ul>
                 <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> |
                 <li><a href="./experience.html">Experience</a></li> |
                 <li><a href="./contact.html">Contact</a></li> |
                 <li><a href="./volunteer.html">Volunteer</a></li> |
-                <li><a href="#"><button class="button">DONATE</button></a></li>
+                <li><a href="#"><button class="btn button">DONATE</button></a></li>
             </ul>
         </nav>
 
     <div class="banner greybg container"><h1 class="vote"><i>Vote KVK!</i></h1>
     <img class="bwpic" src="./kvkpic.jpg"/>
     <h1 class="vote"><i>Vote KVK!</i></h1>
-    </div>
+    </div><br>
     <div class="greybg container">
     <h1 class="gold">Kurt van Kuller</h1>
 
@@ -31,7 +31,7 @@
     </div>
 
   
-    <div class="greybg container"><p class="effective">For effective, professional leadership! No more broken promises! Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p></div><br>
+    <div class="greybg container"><p class="effective">For effective, professional leadership! <br>No more broken promises! <br>Let&#39;s elect someone who understands us and delivers on what&#39;s important.</p></div><br>
     <div class="greybg container"><p class="meet">Meet <span class="boldupper">KURT VAN KULLER</span>, one of the nation&#39;s <span class="boldupper">TOP LOCAL
         GOVERNMENT EXPERTS</span>.</p></div>
   
