--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,30 @@
     <title>Vote KVK!</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar-nav">
         <ul>
             <li class=""><a href="./index.html">Home</a></li> 
             <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
             <li><a href="./experience.html">Experience</a></li> |
             <li><a href="volunteer.html">Volunteer</a></li> |
-            <li><a href="#"><button class="button">DONATE</button></a></li>
+            <li><a href="#"><button class="btn button">DONATE</button></a></li>
         </ul>
     </nav>
-    <div class="contactdiv">
-    <form>
+    <div class="contactdiv container greybg">
+    <form class="form">
         <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
+        <input type="text" id="fname" name="fname" placeholder="George"><br>
         <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname">
+        <input type="text" id="lname" name="lname" placeholder="Washington"><br>
+        <label for="lname">Email:</label><br>
+        <input type="text" id="email" name="email" placeholder="gw@gmail.com">
+
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Sign Up For Newsletter</label>
+          </div>
+
+        <button class="btn button">Submit</button>
       </form>
       </div>
 </body>
