--- a/ontheissues.html
+++ b/ontheissues.html
@@ -8,17 +8,17 @@
     <title>Vote for KVK!</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar-nav">
         <ul>
             <li class=""><a href="./index.html">Home</a></li> |
             <li><a href="./experience.html">Experience</a></li> |
             <li><a href="./contact.html">Contact</a></li> |
             <li><a href="./volunteer.html">Volunteer</a></li> |
-            <li><a href="#"><button class="button">DONATE</button></a></li>
+            <li><a href="#"><button class="btn button">DONATE</button></a></li>
         </ul>
     </nav>
     <ul>
-        <li><span class="red">JUST CUT TAXES ALREADY&#33;</span> Property Taxes in Westchester (and <i>especially</i> the Sound Shore) remain the <u><b><uppercase>HIGHEST</uppercase> in the United States&#33;</b></u> The County can afford to lower them. This will <u>lower rents</u> too&#33;
+        <li class="bggrey container"><span class="red">JUST CUT TAXES ALREADY&#33;</span> Property Taxes in Westchester (and <i>especially</i> the Sound Shore) remain the <u><b><uppercase>HIGHEST</uppercase> in the United States&#33;</b></u> The County can afford to lower them. This will <u>lower rents</u> too&#33;
             <ul>
                 <li class="secondli">Reduce the sky&ndash;high mortgage recording tax and real estate transfer taxes. This will help unfreeze the real estate market and help home values.</li>
                 <li class="secondli">Lower the Sales Tax the County raised in 2019. Help local businesses. Grant breaks for first responders and the neediest. </li>
