--- a/experience.html
+++ b/experience.html
@@ -10,63 +10,60 @@
 <body>
     <nav class="navbar-nav">
         <ul>
-            <li class=""><a href="./index.html">Home</a></li> |
+            <li><a href="./index.html">Home</a></li> |
             <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
             <li><a href="./contact.html">Contact</a></li> |
-            <li><a href="./volunteer.html">Volunteer</a></li> |
-            <li><a href="#"><button class="btn button">DONATE</button></a></li>
+            <li><a href="./contact.html">Volunteer</a></li> |
+            <li><a href="#"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
         </ul>
     </nav>
 
-    <div class="container greybgexp"><p>Choose a proven over-achiever, a renowned EXPERT in Local Government Finance!</p></div>
-<div class="container greybgexp"><p>Kurt is a high energy, over-achiever who will fight for you and keep you informed.</p></div>
+    <div class="container greybgexp margintop expert"><h2 class="expert">Choose a proven over&ndash;achiever, a renowned <uppercase>EXPERT</uppercase> in Local Government Finance&#33;</h2></div>
 
 <img class="kvk5" src="./kvk5.jpg" />
-<div class="container greybgexp"><p><b><u>Longtime Rye homeowner.</u></b>Raised two sons through Rye public schools (one Class President). Married 37 years to wife Diana, actress in Screen Actors Guild, interior decorator. Homeowner now in Oakland Beach area of Rye, previously on Rye Beach Avenue (next to Nursery Field). Native to NYC and Westchester County, also lived briefly in Beverly Hills, Minneapolis, and Greenwich. 9/11 Witness Survivor. Witness to George Floyd riots</p></div>
+<div class="container greybgexp"><p><b><u>Longtime Rye homeowner.</u></b> Raised two sons through Rye public schools. Married 37 years to Diana, member of Screen Actors Guild. Homeowner near Rye Town Park. Native to NYC and Westchester County, also lived briefly in Beverly Hills, Minneapolis, and Greenwich. 9&sol;11 Witness Survivor. Witness to George Floyd riots</p></div>
 
+<div class="container greybgexp"><p><b><u>Full Time Public Servant.</u></b> Excellent health. Will work long hours for District 7</p></div>
+<img class="kvkandmom" src="./kvkandmom.png"/>
+<div class="container greybgexp"><p><b><u>Leading Municipal Finance Expert:</u></b> Legendary 47&ndash;year career in Public Finance on Wall Street. Nationally known in municipal bond market&#59; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world&apos;s largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm.</p></div>
 
+<div class="container greybgexp"><p><b><u>Unprecedented Amount of Awards</u></b> as a Municipal Bond analyst in investors polls.
+    <ul>
+        <li>Elected to still unsurpassed number of awards: First in Institutional Investor
+            magazine (11 times), The Bond Buyer newspaper (2 times) and Smiths Research
+            and Gradings (19 times). Second and third place awards received 11 additional
+            times.</li>
+        <li>Cited by Institutional Investor magazine as one of 10 &quot;<i>Best of the Best</i>&quot; for
+            expertise, communication, accuracy.</li>
+        <li><uppercase>AWARD OF EXCELLENCE from NATIONAL FEDERATION OF MUNICIPAL
+            ANALYSTS.</uppercase></li>
+    </ul>
+</p></div>
 
-<p><b><u>Leading Municipal Finance Expert:</u></b> National figure in municipal finance world; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world’s largest banks. Interacted with top government officials regularly. Legendary 47-year career in Public Finance on Wall Street.</p>
-
-Unprecedented number of first place awards by investors in polls. Cited by Institutional Investor magazine as one of 10 “Best of the Best” for expertise, communication, accuracy. Managed departments of professionals, including 16 years at as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm.
-Foremost National Expert also on governmental housing debt/real estate finance. Provided testimony numerous times to U.S. Congress and Senate. Appointed by National Housing Advisory Panel by NY Senator D’Amato. 
-Widely Recognized Public Speaker and media commentator for municipal bonds. Extensive press portfolio and groundbreaking research published. Regular Conference organizer and Chairman. LinkedIn Champion. 
-Full Time Public Servant since July 2024.  Excellent health. Will work long hours for District 7.  
-Professional Organizations/Public Service: Volunteer at Resurrection Church in Rye, Rye Historical Society (donor), Jay Estate, POTs, Save the Sound, Friends of Read Wildlife, and more.
-Member, Municipal Forum of New York. Past Board Member & Treasurer. Member and past Chairman of Municipal Analysts Group of New York. Member of National Federation of Municipal Analysts and former Board member. 
-Certified Financial Analyst (C.F.A.). 
-Education: MBA Finance, State University of NY at Albany 1980. Full Scholarship. B.A. Economics SUNYA. Merit Scholarship.
-
-AWARDS 
-•	AWARD OF EXCELLENCE from NATIONAL FEDERATION OF MUNICIPAL ANALYSTS. 
-•	Cited by Institutional Investor magazine each year from 1996-2002 as one of ten “Best of the Best” analysts on Wall Street for Expertise and Service.
-•	Elected to unprecedented number of first place awards in investor ballots by Institutional Investor (11), The Bond Buyer (2) and Smiths Research and Gradings (19). Additional second and third place awards (11). Research awards ended due to cessation of certain polls by magazines and finally by departure from Research to managing money and other businesses. 
-
-MEDIA APPEARANCES 
-•	Contributing Author to Fank Fabozzi Handbook of Municipal Bonds (2 chapters) 2007 - still the foremost textbook on municipal bonds for professionals. 
-•	Bloomberg News, (TV and radio); CNN; CREDIT MARKET WATCH. 
-•	Wall Street Journal, New York Times, Forbes, NY Post, Daily News, Investment Dealer's Digest, Money, Dow Jones.
-•	The Bond Buyer, Research & Ratings Review. Mortgage Banking, Municipal Finance Journal, Public Finance Journal, Mkt Chronicle, Securities Week, Municipal Bond Portfolio Management, and more.
-
-PUBLIC SPEAKING: 
-NCSHA Annual Conference 2023, 2022, 2021. Bond Buyer California Conference 9/2017; CFA Society LA 10/17; CFA Institute Annual Wealth Mgt. Conf 3/16; Smith All-Star Conf special keynote speaker 11/2016; California Society of Municipal Analysts Annual Conference 11/15; CFA Institute Roundtables 7/13, 9/11, 5/11, 6/10. Chairman, Smiths Housing Conference 2008. Chairman of FAC's Housing High Yield Conference. 
-Regular annual speaker at Smith’s Affordable Hsg Conference; NFMA, Nat’l Council of State HFAs, S&P conferences, The Bond Buyer, Buyer’s Conference, Fabozzi, JJ Kenny High Yield, MAGNY, BMA, local analysts societies, NY Institute of Finance, New York University. Featured speaker at Smith’s Gaming and Housing conferences. Capital Markets CAS 2014. CFA Minnesota Speeches 12/18, 8/19. Conference Chairman 2020. 
-Key speaker at Merrill Lynch institutional client conferences. Annual speaker at Sit Investment client conferences. 
-
-Professional Organizations and Public Service 
-Member, Municipal Forum of New York. Board Member & Treasurer of Municipal Forum of NY, 1992-97. 
-Chairman, Municipal Analysts Group of New York 1988-89. Current Honorary Past Chairman. 
-Member and Former Board member of National Federation of Municipal Analysts. Chairman, Ethics Committee 1988-91; Pension Committee 2011. 
-Selected by Senator Alphonse D’Amato to serve on National Housing Task Force Advisor Panel1987-89. 
-Chairman, Public Securities Association Committee on Reauthorization of Single Family Mortgage Revenue Bonds. Testimony provided to US Senate 1988. 
-Organized Bond Marlet Association Task Force to advise HUD on Section 8. 1998 
-Section 8 roundtable for Senate Hsg and Comm Dev Subcommittee 1995. 
-Member, PSA Task Force on FHA. Testimony to Senate Banking Committee 1995. 
-Formerly one of initial 100 members of CFA Wealth Management League of Los Angeles. 
+<div class="container greybgexp"><p><u><b>Foremost National Expert on housing&sol;real estate debt.</b></u> Provided testimony
+    numerous times to <uppercase>U.S.</uppercase> Congress and Senate. Appointed by National Housing Advisory
+    Panel by NY Senator D&apos;Amato. Groundbreaking research changed market practices.
+    Contributing Author to Fank Fabozzi Handbook of Municipal Bonds - the foremost
+    textbook on municipal bonds for professionals.</p></div>
 
 
 
 
+<div class="container greybgexp"><p><b><u>Widely Recognized Public Speaker and Media Commentator</u></b> for municipal bonds.
+ Extensive press portfolio and groundbreaking research published. Regular Conference
+    organizer and Chairman. LinkedIn Champion.</p></div>
+<div class="container greybgexp"><p><b><u>Professional Organizations&sol;Public Service</u></b> Volunteer at Resurrection Church in Rye,
+    member&sol;donor for Rye Historical Society, Jay Estate, POTs, Save the Sound, Friends of
+    Read Wildlife, and more. Past Board Member &amp; Treasurer of Municipal Forum of New
+    York. Member and past Chairman of Municipal Analysts Group of New York. Member,
+    National Federation of Municipal Analysts and former Board member.</p></div>
+<div class="container greybgexp"><p><b><uppercase><u><uppercase>MEDIA APPEARANCES:</uppercase></u></uppercase></b> Bloomberg News, (TV and radio), CNN, Wall Street Journal,
+    New York Times, Forbes, NY Post, Daily News, Investment Dealer&#39;s Digest, Money,
+    Dow Jones. The Bond Buyer, Research &amp; Ratings Review, Mortgage Banking,
+    Municipal Finance Journal, Public Finance Journal, Market Chronicle, Securities Week,
+    Municipal Bond Portfolio Management, <uppercase>CREDIT MARKET WATCH</uppercase> and many more.</p></div>
+<div class="container greybgexp"><p><b><u>Education:</u></b> MBA Finance, SUNY Albany 1980. Full Scholarship. B.A. SUNYA. Merit
+    Scholarship. Certified Financial Analyst (C.F.A.) since 1993.</p></div>
 
 
 
