--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,35 @@
             <li class=""><a href="./index.html">Home</a></li> 
             <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
             <li><a href="./experience.html">Experience</a></li> |
-            <li><a href="volunteer.html">Volunteer</a></li> |
-            <li><a href="#"><button class="btn button">DONATE</button></a></li>
+            <li><a href="./contact.html">Volunteer</a></li> |
+            <li><a href="#"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
         </ul>
     </nav>
     <div class="contactdiv container greybg">
-    <form class="form">
+    <form class="form contactform">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" placeholder="George"><br>
+
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" placeholder="Washington"><br>
+
         <label for="lname">Email:</label><br>
-        <input type="text" id="email" name="email" placeholder="gw@gmail.com">
+        <input type="text" id="email" name="email" placeholder="gw@gmail.com"><br>
+
+        <label for="lname">Full Address:</label><br>
+        <input type="text" id="fulladdress" name="fulladdress" placeholder="1600 Pennsylvania Avenue NW Washington, D.C. 20500 "><br><br>
 
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Sign Up For Newsletter</label>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Lawn Sign</label>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Volunteer</label>
           </div>
 
         <button class="btn button">Submit</button>
