--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> |
                 <li><a href="./experience.html">Experience</a></li> |
                 <li><a href="./contact.html">Contact</a></li> |
-                <li><a href="./volunteer.html">Volunteer</a></li> |
-                <li><a href="#"><button class="btn button">DONATE</button></a></li>
+                <li><a href="./contact.html">Volunteer</a></li> |
+                <li><a href="#"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
             </ul>
         </nav>
 
