--- a/experience.html
+++ b/experience.html
@@ -21,11 +21,11 @@
     <div class="container greybgexp margintop expert"><h2 class="expert">Choose a proven over&ndash;achiever, a renowned <uppercase>EXPERT</uppercase> in Local Government Finance&#33;</h2></div>
 
 <img class="kvk5" src="./kvk5.jpg" />
-<div class="container greybgexp"><p><b><u>Longtime Rye homeowner.</u></b> Raised two sons through Rye public schools. Married 37 years to Diana, member of Screen Actors Guild. Homeowner near Rye Town Park. Native to NYC and Westchester County, also lived briefly in Beverly Hills, Minneapolis, and Greenwich. 9&sol;11 Witness Survivor. Witness to George Floyd riots</p></div>
+<div class="container greybgexp"><p><b><u>Longtime Rye homeowner.</u></b> Raised two sons through Rye public schools. Married 37 years to Diana, member of Screen Actors Guild. Homeowner near Rye Town Park. Native to NYC and Westchester. 9&sol;11 Survivor.</p></div>
 
-<div class="container greybgexp"><p><b><u>Full Time Public Servant.</u></b> Excellent health. Will work long hours for District 7</p></div>
+<div class="container greybgexp"><p></p></div>
 <img class="kvkandmom" src="./kvkandmom.png"/>
-<div class="container greybgexp"><p><b><u>Leading Municipal Finance Expert:</u></b> Legendary 47&ndash;year career in Public Finance on Wall Street. Nationally known in municipal bond market&#59; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world&apos;s largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm.</p></div>
+<div class="container greybgexp"><p><b><u>Leading Municipal Finance Expert:</u></b> Legendary 47&ndash;year career in Public Finance on Wall Street. Nationally known in municipal bond market&#59; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world&apos;s largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm. <b><u>Now a Full Time Public Servant.</u></b></p></div>
 
 <div class="container greybgexp"><p><b><u>Unprecedented Amount of Awards</u></b> as a Municipal Bond analyst in investors polls.
     <ul>
