--- a/ontheissues.html
+++ b/ontheissues.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Vote for KVK!</title>
+    <link rel="icon" type="image/x-icon" href="./kvkfavicon.png">
 </head>
 <body>
     <nav class="navbar-nav">
