changed phone placeholder

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <input class="form-control input-sm" type="text" id="fulladdress" name="fulladdress" placeholder="1600 Pennsylvania Avenue NW Washington, D.C. 20500 "><br>
 
         <label for="phonenumber">Phone Number:</label><br>
-        <input class="form-control input-sm" type="text" id="phonenumber" name="phonenumber" placeholder="914-867-5309"><br>
+        <input class="form-control input-sm" type="text" id="phonenumber" name="phonenumber" placeholder="XXX-XXX-XXXX"><br>
 
         <label for="email">Email:</label><br>
         <input class="form-control input-sm" type="text" id="email" name="email" placeholder="gw@gmail.com"><br>
