got rid of underline public servant

--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
 
 <div class="container greybgexp"><p></p></div>
 <img class="kvkandmom" src="./kvkandmom.png"/>
-<div class="container greybgexp"><p><b><u>Leading Municipal Finance Expert:</u></b> Legendary 47&ndash;year career in Public Finance on Wall Street. Nationally known in municipal bond market&#59; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world&apos;s largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm. <b><u>Now a Full Time Public Servant.</u></b></p></div>
+<div class="container greybgexp"><p><b><u>Leading Municipal Finance Expert:</u></b> Legendary 47&ndash;year career in Public Finance on Wall Street. Nationally known in municipal bond market&#59; author in the leading textbook. Managed credit approvals for municipal loans and banking at one of the world&apos;s largest banks. Managed departments of professionals, including 16 years as head of top Municipal Credit Research team at largest Wall Street brokerage and investment banking firm. <b>Now a Full Time Public Servant.</b></p></div>
 
 <div class="container greybgexp"><p><b><u>Unprecedented Amount of Awards</u></b> as a Municipal Bond analyst in investors polls.
     <ul>
