deleted many from media appearances paragraph

--- a/experience.html
+++ b/experience.html
@@ -62,7 +62,7 @@
     New York Times, Forbes, NY Post, Daily News, Investment Dealer&#39;s Digest, Money,
     Dow Jones. The Bond Buyer, Research &amp; Ratings Review, Mortgage Banking,
     Municipal Finance Journal, Public Finance Journal, Market Chronicle, Securities Week,
-    Municipal Bond Portfolio Management, <uppercase>CREDIT MARKET WATCH</uppercase> and many more.</p></div>
+    Municipal Bond Portfolio Management, <uppercase>CREDIT MARKET WATCH</uppercase> and more.</p></div>
 <div class="container greybgexp"><p><b><u>Education:</u></b> MBA Finance, SUNY Albany 1980. Full Scholarship. B.A. SUNYA. Merit
     Scholarship. Certified Financial Analyst (C.F.A.) since 1993.</p></div>
 
