--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
             <li><a href="./experience.html">Experience</a></li> |
             <li><a href="./contact.html">Volunteer</a></li> |
-            <li><a href="#"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
+            <li><a href="https://www.anedot.com/"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
         </ul>
     </nav>
     <div class="contactdiv container greybg">
