--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 <body>
     <nav class="navbar-nav">
         <ul>
-            <li class=""><a href="./index.html">Home</a></li> 
-            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> 
+            <li class=""><a href="./index.html">Home</a></li> |
+            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> |
             <li><a href="./experience.html">Experience</a></li> |
             <li><a href="./contact.html">Volunteer</a></li> |
             <li><a href="https://www.anedot.com/"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
