--- a/ontheissues.html
+++ b/ontheissues.html
@@ -52,7 +52,7 @@
         
     </div>
         <div class="container bggreyissues">
-        <span class="red">PROTECT OUR GREAT QUALITY OF LIFE&#33;</span> Let&#39;s avoid divisive politics and nuisance messages from County officials about other culture&#39;s holidays. Let&#39;s make our streets <uppercase>SAFER</uppercase> and <i>our schools keep the <uppercase>RIGHT PRIORITIES</uppercase></i>&#33;
+        <span class="red">PROTECT OUR GREAT QUALITY OF LIFE&#33;</span> Let&#39;s make our streets <uppercase>SAFER</uppercase> and <i>our schools keep the <uppercase>RIGHT PRIORITIES</uppercase></i>&#33;
             <ul>
                 <li class="secondli">Stop &quot;Sanctuary County&quot; gamesmanship that risks the loss of hundreds of &#36;millions in federal aid. Protect our great Latin American neighborhoods that contribute so much to our lives&#33;</li>
                 <li class="secondli">Expand recreational facilities for our youth. Continue efforts to clean the Sound.</li>
