--- a/ontheissues.html
+++ b/ontheissues.html
@@ -56,7 +56,7 @@
             <ul>
                 <li class="secondli">Stop &quot;Sanctuary County&quot; gamesmanship that risks the loss of hundreds of &#36;millions in federal aid. Protect our great Latin American neighborhoods that contribute so much to our lives&#33;</li>
                 <li class="secondli">Expand recreational facilities for our youth. Continue efforts to clean the Sound.</li>
-                <div><img class="kvkfamily" src="./kvkfamily.jpg"/> <img class="kvk3" src="./kvk3.jpg"/></div>
+                <div class="container"><img class="kvkfamily" src="./kvkfamily.jpg"/> <img class="kvk3" src="./kvk3.jpg"/></div>
             </ul>
     </div>
         <div class="container bggreyissues">
