--- a/contact.html
+++ b/contact.html
@@ -44,16 +44,16 @@
         <input class="form-control input-sm" type="text" id="message" name="message" placeholder="I know a way to help your campaign"><br><br>
          
       
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <div class="form-check bigger">
+            <input type="checkbox" class="form-check-input" id="signup">
             <label class="form-check-label" for="exampleCheck1">Sign Up For Newsletter</label>
           </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <div class="form-check bigger">
+            <input type="checkbox" class="form-check-input" id="lawnsign">
             <label class="form-check-label" for="exampleCheck1">Lawn Sign</label>
           </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <div class="form-check bigger">
+            <input type="checkbox" class="form-check-input" id="volunteer">
             <label class="form-check-label" for="exampleCheck1">Volunteer</label>
           </div><br>
         </div>
