contact sign ups checks

--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,11 @@
         <div class="form-check bigger">
             <input type="checkbox" class="form-check-input" id="signup">
             <label class="form-check-label" for="exampleCheck1">Sign Up For Newsletter</label>
-          </div>
+          </div><br>
           <div class="form-check bigger">
             <input type="checkbox" class="form-check-input" id="lawnsign">
             <label class="form-check-label" for="exampleCheck1">Lawn Sign</label>
-          </div>
+          </div><br>
           <div class="form-check bigger">
             <input type="checkbox" class="form-check-input" id="volunteer">
             <label class="form-check-label" for="exampleCheck1">Volunteer</label>
