--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
      
         <label class="bigger" for="message">Message:</label><br>
-        <input class="form-control input-sm" type="text" id="message" name="message" placeholder="I know a way to help your campaign"><br><br>
+        <textarea class="form-control input-sm" type="text" id="message" name="message" placeholder="I know a way to help your campaign"></textarea><br><br>
       
         <div class="form-check bigger">
             <input type="checkbox" class="form-check-input" id="signup">
