changed to silver logo

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <div class="contactdiv container greybg">
-      <img src="./kvklogo.jpg"/>
+      <img src="./logo2silver.jpg"/>
     <form class="form contactform">
         <div class="form-group">
         <p>For questions, comments, or to volunteer, please fill out the form below or email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkvk@gmail.com</u></a>  and I will respond soon. Thank you.</p>
