added vetical nav bar with some queries

--- a/experience.html
+++ b/experience.html
@@ -11,10 +11,10 @@
 <body>
     <nav class="navbar-nav">
         <ul>
-            <li><a href="./index.html">Home</a></li> |
-            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li> |
-            <li><a href="./contact.html">Contact</a></li> |
-            <li><a href="./contact.html">Volunteer</a></li> |
+            <li><a href="./index.html">Home</a></li><span class="pipe">|</span>
+            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li><span class="pipe">|</span>
+            <li><a href="./contact.html">Contact</a></li><span class="pipe">|</span>
+            <li><a href="./contact.html">Volunteer</a></li><span class="pipe">|</span>
             <li><a href="https://www.anedot.com/"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
         </ul>
     </nav>
