--- a/experience.html
+++ b/experience.html
@@ -9,12 +9,12 @@
     <link rel="icon" type="image/x-icon" href="./kvkfavicon.png">
 </head>
 <body>
-    <nav class="navbar-nav">
+    <nav class="navbar-nav mx-auto">
         <ul>
-            <li><a href="./index.html">Home</a></li><span class="pipe">|</span>
-            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li><span class="pipe">|</span>
-            <li><a href="./contact.html">Contact</a></li><span class="pipe">|</span>
-            <li><a href="./contact.html">Volunteer</a></li><span class="pipe">|</span>
+            <li><a href="./index.html">Home</a></li>
+            <li><a class="firstnavli" href="./ontheissues.html">On the Issues</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./contact.html">Volunteer</a></li>
             <li><a href="https://www.anedot.com/"><button class="btn button">DONATE&nbsp;<br>&#36;&nbsp;&#36;&nbsp;&#36;</button></a></li>
         </ul>
     </nav>
