changed merrit to regents scholarship

--- a/experience.html
+++ b/experience.html
@@ -63,7 +63,7 @@
     Dow Jones. The Bond Buyer, Research &amp; Ratings Review, Mortgage Banking,
     Municipal Finance Journal, Public Finance Journal, Market Chronicle, Securities Week,
     Municipal Bond Portfolio Management, <uppercase>CREDIT MARKET WATCH</uppercase> and more.</p></div>
-<div class="container greybgexp"><p><b><u>Education:</u></b> MBA Finance, SUNY Albany 1980. Full Scholarship. B.A. SUNYA. Merit
+<div class="container greybgexp"><p><b><u>Education:</u></b> MBA Finance, SUNY Albany 1980. Full Scholarship. B.A. SUNYA. Regents
     Scholarship. Certified Financial Analyst (C.F.A.) since 1993.</p></div>
 
 
